# coeiroink2-txt2wav

./: .gitignore  Cargo.toml  LICENCE  README.md  convert.bat  openapi.json
coeiroink2/: Cargo.toml  README.md
coeiroink2/.openapi-generator/: FILES
coeiroink2/api/: openapi.yaml
coeiroink2/docs/: AccentPhrase.md  AudioQuery.md  CoeirocoreMetaStyle.md  CoeirocoreModelStyle.md  CoeirocoreMoraMora.md  CoeirocoreVUtilMora.md  DictionaryWord.md  DictionaryWords.md  DownloadableModel.md  EngineInfo.md  HttpValidationError.md  MoraDuration.md  PhonemeDuration.md  Prosody.md  ProsodyMakingParam.md  Speaker.md  SpeakerFolderPath.md  SpeakerInfo.md  SpeakerMeta.md  SpeakerMetaForTextBox.md  SpeakerPolicy.md  Status.md  StyleInfo.md  SynthesisParam.md  TimeRange.md  ValidationError.md  WavMakingParam.md  WavProcessingParam.md  WavWithDuration.md  WorldF0.md  default_api.md
coeiroink2/examples/client/: main.rs
coeiroink2/examples/server/: server.rs
coeiroink2/src/: lib.rs  models.rs
coeiroink2/src/client/: mod.rs
coeiroink2/src/server/: mod.rs
src/: main.rs  typedef.rs
src/subcommands/: list.rs  mod.rs  predict.rs
