[package]
name = "coeiroink2-txt2mp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.0", features = ["derive"] }
coeiroink2 = { path = "coeiroink2" }
serde = {version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
tokio = "1.36.0"

[workspace]
members = [
    "coeiroink2"
]
